...
            android:layout_marginStart="@dimen/linearlayout_dialog_snmp_auth_title_margin_left"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_title_margin_top"
            android:layout_marginBottom="@dimen/linearlayout_dialog_snmp_auth_title_margin_bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/label_dialog_snmp_auth_title" />

...
            android:layout_marginStart="@dimen/linearlayout_dialog_snmp_auth_snmp_user_name_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_snmp_auth_snmp_user_name_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_snmp_user_name_margin_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_snmp_user_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_snmp_auth_snmp_user_name"
                android:text="@string/label_dialog_snmp_auth_snmp_user_name" />

            <EditText
                android:id="@+id/edittext_dialog_snmp_auth_snmp_user_name"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
            android:layout_marginEnd="@dimen/linearlayout_dialog_snmp_auth_snmp_auth_passphrase_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_snmp_auth_passphrase_margin_top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_snmp_auth_passphrase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_snmp_auth_snmp_auth_passphrase"
                android:text="@string/label_dialog_snmp_auth_snmp_auth_passphrase" />

            <EditText
                android:id="@+id/edittext_dialog_snmp_auth_snmp_auth_passphrase"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
            android:layout_marginStart="@dimen/linearlayout_dialog_snmp_auth_snmp_auth_algorithm_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_snmp_auth_snmp_auth_algorithm_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_snmp_auth_algorithm_margin_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_snmp_auth_algorithm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/label_dialog_snmp_auth_snmp_auth_algorithm" />

            <Spinner
                android:id="@+id/spinner_dialog_snmp_auth_snmp_auth_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spinner_dialog_snmp_auth_margin_top" />

        </LinearLayout>

...
            android:layout_marginEnd="@dimen/linearlayout_dialog_snmp_auth_snmp_priv_passphrase_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_snmp_priv_passphrase_margin_top"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_snmp_priv_passphrase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_snmp_auth_snmp_priv_passphrase"
                android:text="@string/label_dialog_snmp_auth_snmp_priv_passphrase" />

            <EditText
                android:id="@+id/edittext_dialog_snmp_auth_snmp_priv_passphrase"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
            android:layout_marginStart="@dimen/linearlayout_dialog_snmp_auth_snmp_priv_algorithm_margin_left"
            android:layout_marginEnd="@dimen/linearlayout_dialog_snmp_auth_snmp_priv_algorithm_margin_end"
            android:layout_marginTop="@dimen/linearlayout_dialog_snmp_auth_snmp_priv_algorithm_margin_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_dialog_snmp_auth_snmp_priv_algorithm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/label_dialog_snmp_auth_snmp_priv_algorithm" />

            <Spinner
                android:id="@+id/spinner_dialog_snmp_auth_snmp_priv_algorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spinner_dialog_snmp_auth_margin_top" />

        </LinearLayout>

...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_snmp_auth_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_snmp_auth_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_snmp_auth_cancel"
...
