/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui.dialog;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isPlatformPopup;
import static androidx.test.espresso.matcher.ViewMatchers.Visibility;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertTrue;

import android.os.Bundle;

import androidx.test.core.app.ActivityScenario;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.model.AccessTypeData;
import net.ibbaa.keepitup.model.SNMPAuthAlgorithm;
import net.ibbaa.keepitup.model.SNMPPrivAlgorithm;
import net.ibbaa.keepitup.test.mock.MockClipboardManager;
import net.ibbaa.keepitup.ui.BaseUITest;
import net.ibbaa.keepitup.ui.GlobalSettingsActivity;
import net.ibbaa.keepitup.util.BundleUtil;
import net.ibbaa.keepitup.util.StringUtil;

import org.junit.Test;
import org.junit.runner.RunWith;

@MediumTest
@RunWith(AndroidJUnit4.class)
public class SNMPAuthDialogTest extends BaseUITest {

    private ActivityScenario<?> activityScenario;

    @Test
    public void testDefaultValues() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        SNMPAuthDialog dialog = openSNMPAuthDialog();
        onView(withId(R.id.textview_dialog_snmp_auth_title)).check(matches(withText("SNMP authentication")));
        onView(withId(R.id.textview_dialog_snmp_auth_snmp_user_name_label)).check(matches(withText("Auth username")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).check(matches(withText("")));
        onView(withId(R.id.textview_dialog_snmp_auth_snmp_auth_passphrase_label)).check(matches(withText("Auth passphrase")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.textview_dialog_snmp_auth_snmp_auth_algorithm_label)).check(matches(withText("Auth algorithm")));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("None")));
        onView(withId(R.id.textview_dialog_snmp_auth_snmp_priv_passphrase_label)).check(matches(withText("Privacy passphrase")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.textview_dialog_snmp_auth_snmp_priv_algorithm_label)).check(matches(withText("Privacy algorithm")));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        assertEquals("", dialog.getSNMPUserName());
        assertEquals("", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.NONE, dialog.getSNMPAuthAlgorithm());
        assertEquals("", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.NONE, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testDefaultValuesScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        openSNMPAuthDialog();
        rotateScreen(activityScenario);
        onView(withId(R.id.textview_dialog_snmp_auth_title)).check(matches(withText("SNMP authentication")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withText("")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("None")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        rotateScreen(activityScenario);
        SNMPAuthDialog dialog = getDialog();
        assertEquals("", dialog.getSNMPUserName());
        assertEquals("", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.NONE, dialog.getSNMPAuthAlgorithm());
        assertEquals("", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.NONE, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testInitialValues() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        AccessTypeData data = new AccessTypeData();
        data.setSnmpUserName("testuser");
        data.setSnmpAuthPassphrase("authpass");
        data.setSnmpAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        data.setSnmpPrivPassphrase("privpass");
        data.setSnmpPrivAlgorithm(SNMPPrivAlgorithm.AES192);
        SNMPAuthDialog dialog = openSNMPAuthDialog(data);
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).check(matches(withText("testuser")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withText(StringUtil.getSecretPlaceholder())));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-256")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withText(StringUtil.getSecretPlaceholder())));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("AES-192")));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        assertEquals("testuser", dialog.getSNMPUserName());
        assertEquals("authpass", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.SHA256, dialog.getSNMPAuthAlgorithm());
        assertEquals("privpass", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.AES192, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testInitialValuesScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        AccessTypeData data = new AccessTypeData();
        data.setSnmpUserName("testuser");
        data.setSnmpAuthPassphrase("authpass");
        data.setSnmpAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        data.setSnmpPrivPassphrase("privpass");
        data.setSnmpPrivAlgorithm(SNMPPrivAlgorithm.AES192);
        openSNMPAuthDialog(data);
        rotateScreen(activityScenario);
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).check(matches(withText("testuser")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withText(StringUtil.getSecretPlaceholder())));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-256")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withText(StringUtil.getSecretPlaceholder())));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("AES-192")));
        rotateScreen(activityScenario);
        SNMPAuthDialog dialog = getDialog();
        assertEquals("testuser", dialog.getSNMPUserName());
        assertEquals("authpass", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.SHA256, dialog.getSNMPAuthAlgorithm());
        assertEquals("privpass", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.AES192, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testGettersReturnSelectedValues() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        SNMPAuthDialog dialog = openSNMPAuthDialog();
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).perform(replaceText("myuser"));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-512"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).perform(replaceText("myauthpass"));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-256C"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).perform(replaceText("myprivpass"));
        assertEquals("myuser", dialog.getSNMPUserName());
        assertEquals("myauthpass", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.SHA512, dialog.getSNMPAuthAlgorithm());
        assertEquals("myprivpass", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.AES256C, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testGettersReturnSelectedValuesScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        openSNMPAuthDialog();
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).perform(replaceText("myuser"));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-512"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).perform(replaceText("myauthpass"));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-256C"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).perform(replaceText("myprivpass"));
        rotateScreen(activityScenario);
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_user_name)).check(matches(withText("myuser")));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-512")));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("AES-256C")));
        rotateScreen(activityScenario);
        SNMPAuthDialog dialog = getDialog();
        assertEquals("myuser", dialog.getSNMPUserName());
        assertEquals("myauthpass", dialog.getSNMPAuthPassphrase());
        assertEquals(SNMPAuthAlgorithm.SHA512, dialog.getSNMPAuthAlgorithm());
        assertEquals("myprivpass", dialog.getSNMPPrivPassphrase());
        assertEquals(SNMPPrivAlgorithm.AES256C, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testSNMPAuthAlgorithmOptions() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        SNMPAuthDialog dialog = openSNMPAuthDialog();
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-1"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-1")));
        assertEquals(SNMPAuthAlgorithm.SHA1, dialog.getSNMPAuthAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-384"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-384")));
        assertEquals(SNMPAuthAlgorithm.SHA384, dialog.getSNMPAuthAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("None"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("None")));
        assertEquals(SNMPAuthAlgorithm.NONE, dialog.getSNMPAuthAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testSNMPPrivAlgorithmOptions() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        AccessTypeData data = new AccessTypeData();
        data.setSnmpAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        SNMPAuthDialog dialog = openSNMPAuthDialog(data);
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("DES"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("DES")));
        assertEquals(SNMPPrivAlgorithm.DES, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-192"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("AES-192")));
        assertEquals(SNMPPrivAlgorithm.AES192, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-256C"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withSpinnerText("AES-256C")));
        assertEquals(SNMPPrivAlgorithm.AES256C, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testPrivFieldsDisabledWhenAuthNone() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        SNMPAuthDialog dialog = openSNMPAuthDialog();
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-256"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        assertEquals(SNMPAuthAlgorithm.SHA256, dialog.getSNMPAuthAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-192"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        assertEquals(SNMPPrivAlgorithm.AES192, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("None"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        assertEquals(SNMPAuthAlgorithm.NONE, dialog.getSNMPAuthAlgorithm());
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("MD5"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        assertEquals(SNMPAuthAlgorithm.MD5, dialog.getSNMPAuthAlgorithm());
        assertEquals(SNMPPrivAlgorithm.AES192, dialog.getSNMPPrivAlgorithm());
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testPrivFieldsDisabledWhenAuthNoneScreenRotation() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        openSNMPAuthDialog();
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("SHA-256"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("AES-192"))).inRoot(isPlatformPopup()).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        rotateScreen(activityScenario);
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("SHA-256")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("None"))).inRoot(isPlatformPopup()).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("None")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.GONE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).perform(click());
        onData(allOf(is(instanceOf(String.class)), is("MD5"))).inRoot(isPlatformPopup()).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_auth_algorithm)).check(matches(withSpinnerText("MD5")));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_auth_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.edittext_dialog_snmp_auth_snmp_priv_passphrase)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.spinner_dialog_snmp_auth_snmp_priv_algorithm)).check(matches(withEffectiveVisibility(Visibility.VISIBLE)));
        onView(withId(R.id.imageview_dialog_snmp_auth_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testPrivPassphraseDisabledWhenPrivNone() {
        activityScenario = launchSettingsInputActivity(GlobalSettingsActivity.class, getBypassSystemSAFBundle());
        AccessTypeData data = new AccessTypeData();
        data.setSnmpAuthAlgorithm(SNMPAuthAlgorithm.SHA256);
        SNMPAuthDialog dialog = openSNMPAuthDialog(data);
